--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,12 @@
 # =============== #
 *.pidb.meta
 *.stackdump
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ibrary/*
-/[Oo]bj/
-/[Tt]emp/
+[Bb]uild/
+[Bb]uilds/
+[Ll]ibrary/*
+[Oo]bj/
+[Tt]emp/
+[Uu]ser[Ss]ettings/
 sysinfo.txt
 
 # ============================================= #
